# claudautonomous

./: README.md  android_skill.md  fossil_scm_skill.md  hugo-migration-plan.md  repo_review.md  rp-hal-pico2-w.md  rust-mavlink-review.md  starsector_modding_skill.md  twine_editing_skill.md  z-image-base-fine-tuning.md  z-image-turbo-post-training.md
claude-elevator/: .gitignore  README.md  elevator-music.sh  install-audio-player.sh  settings.example.json
dementia-reader-tts/: .gitignore  README.md  pyproject.toml
dementia-reader-tts/docs/: DESIGN.md
dementia-reader-tts/examples/sample_book/: book.toml  chapter-01.txt  chapter-02.txt
dementia-reader-tts/src/dementia_reader_tts/: __init__.py  audio.py  book.py  cli.py  config.py  devices.py  models.py  packager.py  pipeline.py  segmenter.py
dementia-reader-tts/src/dementia_reader_tts/align/: __init__.py  base.py  dummy.py  whisperx_aligner.py
dementia-reader-tts/src/dementia_reader_tts/tts/: __init__.py  base.py  chatterbox.py  dummy.py  kokoro.py
dementia-reader-tts/tests/: test_pipeline.py  test_segmenter.py
dementia-reader-tts/voices/: README.md  voices.example.toml
docs/: clawdbot-investigation.md
hermes-agent-secure-setup/: index.html
kanboard/: .env.example  README.md  docker-compose.yml
langchain-gemini-audio/: gemini-audio-example.ts  package.json
nasa-space-events/: README.md  pyproject.toml  space_weather_timeline.py
nws-weather-api/: .gitignore  README.md  package-lock.json  package.json
starbattle/: analysis.md  hartez_starBattle_analysis.md  nikoli_puzzle_solver_analysis.md
transcription-parakeet/: .gitignore  README.md  SETUP.md  package.json
transcription-whisper/: .gitignore  API-REFERENCE.md  README.md  SETUP.md  package.json
wake-word-assistant/: .gitignore  README.md  main.py  requirements.txt  speech_recognizer.py  wake_word_detector.py
z3-exploration/: Cargo.toml
z3-exploration/src/: main.rs
(+28 files in other folders)
