[project]
name = "dementia-reader-tts"
version = "0.1.0"
description = "Pre-render narrated audiobooks (per chapter audio + word-level sync maps) for a dementia reading app, using open-weights TTS."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
]

[project.optional-dependencies]
# High-quality cloning TTS (workstation/GPU pre-render). MIT-licensed weights.
chatterbox = [
    "chatterbox-tts>=0.1.1",
    "torch>=2.1",
    "torchaudio>=2.1",
]
# Tiny preset-voice TTS (CPU / on-device path). Apache-2.0 weights.
kokoro = [
    "kokoro>=0.9.2",
]
# Forced alignment -> word timestamps. Requires ffmpeg on PATH.
align = [
    "whisperx>=3.1.1",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
dementia-reader-tts = "dementia_reader_tts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dementia_reader_tts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
